Fixed bug #30566 (attribute namespace URIs are inconsistent when parsing).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@172587 c90b9560-bf6c-de11-be94-00142212c4b1